# VolumeMBO_OS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LU_order_statistic.py  README.md  array_inherit.py  mnist_final.py  optdigits_final.py  priority_queue.py  pyproject.toml  requirements-dev.txt  three_moons_final.py
.github/workflows/: ci.yml
benchmarks/: benchmark_three_moons.py  plot_three_moons_benchmark.py
data/: labels_optdigits.csv  vals_optdigits.csv  vecs_optdigits.csv  weights_optdigits.npz  weights_three_moons.npz
doc/: conf.py  index.rst  python_api.rst
include/volumembo/: median_fitter.hpp  priority_queue.hpp  pybind11_numpy_interop.hpp  span2d.hpp
jupyter/: debug_0.py  image.ipynb  mnist.ipynb  optdigits.ipynb  three_moons.ipynb
lib/: median_fitter.cpp
results/: input.txt  mnist_0.0_1W^2.csv  mnist_0.0_1W^4.csv  mnist_0.0_1rank K.csv  mnist_0.0_5rank K.csv  mnist_0.1_1rank K.csv  mnist_0.1_5rank K.csv  optdigits_0.0_1I + h W + h^2 2 W^2.csv  optdigits_0.0_1W^2.csv  optdigits_0.0_1W^4.csv  optdigits_0.0_1rank K.csv  optdigits_0.0_1w^2-epsI.csv  optdigits_0.0_5I + h W + h^2 2 W^2.csv  optdigits_0.0_5W^2.csv  optdigits_0.0_5W^4.csv  optdigits_0.0_5rank K.csv  optdigits_0.0_5w^2-epsI.csv  optdigits_0.1_1I + h W + h^2 2 W^2.csv  optdigits_0.1_1W^2.csv  optdigits_0.1_1W^4.csv  optdigits_0.1_1rank K.csv  optdigits_0.1_1w^2-epsI.csv  optdigits_0.1_5I + h W + h^2 2 W^2.csv  optdigits_0.1_5W^2.csv  optdigits_0.1_5W^4.csv  optdigits_0.1_5rank K.csv  optdigits_0.1_5w^2-epsI.csv  three_moons_0.0_1I + h W + h^2 2 W^2.csv  three_moons_0.0_1W^2.csv  three_moons_0.0_1W^4.csv  three_moons_0.0_1rank K.csv  three_moons_0.0_1w^2-epsI.csv  three_moons_0.0_5I + h W + h^2 2 W^2.csv  three_moons_0.0_5W^2.csv  three_moons_0.0_5W^4.csv  three_moons_0.0_5rank K.csv  three_moons_0.0_5w^2-epsI.csv  three_moons_0.1_1I + h W + h^2 2 W^2.csv  three_moons_0.1_1W^2.csv  three_moons_0.1_1W^4.csv  (+7 more)
src/volumembo/: __init__.py  datasets.py  heap.py  mbo.py  median_fitter.py  plot.py  timer.py  utils.py  volumembo_python.cpp
src/volumembo/legacy/: LU_order_statistic.py  __init__.py  array_inherit.py  priority_queue.py
tests/c++/: CMakeLists.txt  median_fitter_t.cpp  priority_queue_t.cpp
tests/python/: test_fit_median.py  test_priority_queue.py
