# This section describes the requirements of the build/installation
# process itself.
[build-system]
requires = [
    "pybind11",
    "scikit-build-core >=0.10",
]
build-backend = "scikit_build_core.build"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for volumembo's version
[project]
name = "volumembo"
version = "0.1.0"
description = "Efficient Volume-Preserving MBO Scheme for Data Clustering"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
readme = "README.md"
authors = [{ name = "Fabius Krämer", email = "f.kraemer@math.uni-heidelberg.de" }]
requires-python = ">=3.10"
dependencies = ["graphlearning", "matplotlib", "numpy", "scipy", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = "CMakeLists.txt"
ninja.version = ">=1.11"

[tool.scikit-build.cmake.define]
BUILD_TESTS = "ON"

[tool.pre-commit]
hook-types = ["pre-commit"]
