# This section describes the requirements of the build/installation
# process itself.
[build-system]
requires = [
    "pybind11",
    "scikit-build-core >=0.10",
]
build-backend = "scikit_build_core.build"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for volumembo's version
[project]
name = "volumembo"
version = "0.1.0"
description = "Efficient Volume-Preserving MBO Scheme for Data Clustering"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
authors = [{ name = "Fabius Krämer", email = "f.kraemer@math.uni-heidelberg.de" }, { name = "Thomas Isensee", email = "thomas.isensee@iwr.uni-heidelberg.de" }]
requires-python = ">=3.10"
dependencies = ["graphlearning", "matplotlib", "numpy", "scipy", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/fabiuskt/VolumeMBO_OS"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = "CMakeLists.txt"
ninja.version = ">=1.11"

[tool.scikit-build.cmake.define]
BUILD_TESTS = "OFF"

[tool.pre-commit]
hook-types = ["pre-commit"]

[tool.ruff]
src = ["src", "tests/python"]
extend-exclude = ["src/volumembo/legacy", "*.ipynb"]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear - common mistakes
    "C4", # flake8-comprehensions - cleaner comprehensions
    "E",  # style errors
    "F",  # logical errors
    "I",  # import sorting
    "UP", # pyupgrade - modernize syntax
]
ignore = ["E501", "B007"] # Ignore line-length for docstrings/comments


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
